--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "firebase": "^11.6.1",
     "framer-motion": "^12.9.2",
     "lucide-react": "^0.344.0",
@@ -29,5 +30,6 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "vite": "^5.4.2"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
