--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -62,8 +62,6 @@ pyasn1_modules==0.4.2
 pydantic==2.11.3
 pydantic-settings==2.9.1
 pydantic_core==2.33.1
-pymongo==4.12.0
-python-dotenv==1.0.0
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.31.0
@@ -81,6 +79,12 @@ typing-inspect==0.9.0
 typing-inspection==0.4.0
 typing_extensions==4.13.2
 urllib3==2.4.0
-Werkzeug==3.1.3
 yarl==1.20.0
 zstandard==0.23.0
+pymongo==3.12.0
+python-dotenv>=0.21.0
+PyJWT==2.1.0
+Werkzeug>=2.3.7
+PyPDF2==2.0.0
+python-docx==0.8.11
+nltk==3.6.3
