--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -25,6 +25,7 @@ google-api-core==2.24.2
 google-auth==2.39.0
 google-generativeai==0.3.1
 googleapis-common-protos==1.70.0
+gunicorn==21.2.0
 greenlet==3.2.1
 grpcio==1.71.0
 grpcio-status==1.62.3
