--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -31,6 +31,7 @@ grpcio==1.71.0
 grpcio-status==1.62.3
 h11==0.16.0
 httpcore==1.0.9
+docx2txt==0.8
 httpx==0.28.1
 httpx-sse==0.4.0
 huggingface-hub==0.30.2
