--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -65,6 +65,7 @@ pydantic==2.11.3
 pydantic-settings==2.9.1
 pydantic_core==2.33.1
 PyYAML==6.0.2
+PyPDF2==3.0.1
 regex==2024.11.6
 requests==2.31.0
 requests-toolbelt==1.0.0
