--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.2",
+    "axios": "^1.9.0",
     "firebase": "^10.8.0",
     "framer-motion": "^12.9.4",
     "lucide-react": "^0.503.0",
